# fabcam

./: README.md
FabCam/: .gitignore  CAMERA_DIAGNOSIS.md  CLAUDE.md  DEVELOPMENT.md  PRD.md  README.md  UV-COMPARISON.md  camera-test.sh  camera.py  camera_test.py  fabcam.sh  main.py  pyproject.toml  ref0.txt  requirements.txt  setup-uv.sh  start-uv.sh  start.sh  test_pi_camera.py  uv-setup.sh
FabCam/backend/: camera.py  camera1.py  camera2.py  camera_base.py  camera_factory.py  camera_legacy_backup.py  camera_manager.py  main.py  main_auto.py  main_hybrid.py  models.py  pi_camera.py
FabCam/frontend/: index.html  script.js  style.css  ui-improvements.css
FabCam/static/videos/: recording_20250812_085845.avi  recording_20250812_090010.avi
